# api-salmon

./: DESCRIPTION  Dockerfile  NAMESPACE  README.md  app.py  docker-compose.yml  functions.R  pyproject.toml
R/: functions.R  import-packages.R  utils.R
man/: fiskdatabasen_connect.Rd  get_columns.Rd  query_table.Rd  return_columns.Rd  transform_to_string.Rd
