[project]
name = ""
version = ""
description = ""
authors = [
    {name = "bencretois", email = "bencretois@gmail.com"},
]
dependencies = [
    "pymssql~=2.2",
    "hug~=2.6",
    
]
requires-python = ">=3.8"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
